--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Weizheng Lai
 
 # Your name to show in the footer
-author: Some Person
+author: Weizheng Lai
 
 # --- List of links in the navigation bar --- #
 
