--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ author: Weizheng Lai
 navbar-links:
   #About Me: "aboutme"
   Research: "research"
+  Resources: "resources"
 
 
 # --- Logo --- #
