--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author: Weizheng Lai
 # --- List of links in the navigation bar --- #
 
 navbar-links:
+  Home: "https://laiwz.github.io/"
   CV: "/uploads/cv/CV.pdf"
   Research: "research"
   Resources: "resources"
