--- a/_config.yml
+++ b/_config.yml
@@ -118,7 +118,7 @@ footer-link-col: "#404040"
 #mobile-theme-col: "#0085A1"
 
 # For any extra visual customization, you can include additional CSS files in every page on your site. List any custom CSS files here
-site-
+site:
   - "/assets/css/beautifuljekyll-minimal.css"
 
 # If you have common JavaScript files that should be included in every page, list them here
